# claude-code-mlx-proxy-gemma4

./: SETUP.md  config.py  main.py  patch_env.sh  pyproject.toml
patches/mlx_lm/models/: cache.py  switch_layers.py
patches/mlx_vlm/: generate.py  turboquant.py  utils.py
patches/mlx_vlm/models/: base.py  cache.py
patches/mlx_vlm/models/gemma4/: language.py
