[project]
name = "claude-code-mlx-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "huggingface-hub>=0.34.3",
    "mlx-lm>=0.26.2",
    "mlx-vlm>=0.4.4",
    "python-dotenv>=1.1.1",
]
